# spark

./: .gitignore  README.md  SPARK.md  fluxlite.spec  pyproject.toml  test_review_tmp.py
fluxlite/: __init__.py  app.py  commands.py  context.py  i18n.py  knowledge.py  mcp_client.py  memory.py  plugin_manager.py  profile.py  project_map.py  project_rules.py  startup.py  usage.py  wizard.py
fluxlite/provider/: __init__.py  anthropic.py  base.py  openai_compat.py
fluxlite/tools/: batch_edit.py  browser.py  code_exec.py  code_search.py  file_ops.py  git_ops.py  hooks.py  network.py  planner.py  refactor.py  registry.py  sandbox.py  search_replace.py  subagent.py  system_tools.py  terminal.py  test_runner.py  web_search.py
tests/: test_commands.py  test_context.py  test_file_ops.py  test_knowledge.py  test_memory.py  test_parallel.py  test_planner.py  test_project_rules.py  test_refactor.py  test_registry.py  test_search_replace.py  test_search_replace_extended.py  test_usage.py
